# nutrition-fact-labeller-rust

./: .containerignore  .gitignore  BACKEND_NOTES.md  BURN_CONVERSION.md  BURN_INVESTIGATION.md  CI_OPTIMIZATION.md  Cargo.toml  Containerfile  build.rs  install-hooks.sh  pre-push  test_cases.csv  test_cases_all.csv
.github/: README.md  copilot-setup-steps.yml  copilot-tasks.yml  setup-hooks.sh
.github/hooks/: pre-push
.github/workflows/: docker-image.yml  pr-tests.yml
models/: README.md
src/: burn_ocr.rs  main.rs  ocr.rs  spellcheck.rs
src/burn_models/: mod.rs
src/model/: mod.rs
