[package]
name = "nutrition-fact-labeller"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
env_logger = "0.11.8"
futures-util = "0.3.31"
image = "0.25.7"
log = "0.4.28"
# Burn deep learning framework with LibTorch backend
# LibTorch provides 5-20x faster performance than NdArray
# Supports all operations including adaptive_avg_pool2d
# Requires libtorch C++ library to be installed on the system
burn = { version = "0.20.1", features = ["tch"] }
burn-import = { version = "0.20.1", features = ["onnx"] }
burn-store = { version = "0.20.1", features = ["std"] }
# Pin to exact candle-core version that burn-import expects (workaround for compatibility issue)
candle-core = "=0.9.1"
# oar-ocr has been replaced with Burn-based implementation
pretty_assertions = "1.4.1"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_derive = "1.0.219"
strsim = "0.11.1"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["server", "multipart"] }

[build-dependencies]
burn-import = { version = "0.20.1", features = ["onnx"] }
candle-core = "=0.9.1"

[dev-dependencies]
csv = "1.3.1"
pretty_assertions = "1.4.1"
