[package]
name = "nutrition-fact-labeller"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11"
env_logger = "0.11.8"
futures-util = "0.3.31"
image = "0.25.7"
log = "0.4.28"
pretty_assertions = "1.4.1"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_derive = "1.0.219"
strsim = "0.11.1"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["server", "multipart"] }

# Burn deep learning framework
burn = { git = "https://github.com/tracel-ai/burn", features = ["ndarray"] }
burn-store = { git = "https://github.com/tracel-ai/burn", features = ["std", "burnpack"] }

[build-dependencies]
burn-onnx = { git = "https://github.com/tracel-ai/burn-onnx" }

[dev-dependencies]
csv = "1.3.1"
pretty_assertions = "1.4.1"
